# drf_homework

./: .env.sample  .gitignore  Dockerfile  README.md  constants.py  docker-compose.yaml  docker-copy.txt  pyproject.toml  requirements.txt
config/: settings.py  urls.py
cours/: models.py  paginations.py  permissions.py  serealizers.py  servises.py  tasks.py  tests.py  urls.py  validators.py  views.py
cours/migrations/: 0001_initial.py  0002_alter_lesson_video_link.py  0003_pay.py  0004_course_user_lesson_user_alter_pay_course_and_more.py  0005_subscription.py  0006_subscription_subscribe.py  0007_alter_subscription_subscribe.py  0008_alter_subscription_user.py
users/: models.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
